XXXX-XX-XX  Albert Chu <chu11@llnl.gov>

	* common/src/err-wrappers.h, common/src/fiid-wrappers.h,
	common/src/udm-err-wrappers.h, common/src/udm-fiid-wrappers.h:
	Update error logging routines with more details.  Add locate error
	logging routines.  Fix several logging bugs.

	* libfreeipmi/src/ipmi-kcs-aci.c,
	libfreeipmi/src/ipmi-openipmi-api.c,
	libfreeipmi/src/ipmi-ssif-api.c: Use error logging routines.

	* libfreeipmi/include/freeipmi/ipmi-locate.h,
	libfreeipmi/src/ipmi-locate.c,
	libfreeipmi/src/ipmi-locate-acpi-spmi.c,
	libfreeipmi/src/ipmi-locate-defaults.c,
	libfreeipmi/src/ipmi-locate-dmidecode.c,
	libfreeipmi/src/ipmi-locate-pci.c,
	libfreeipmi/src/ipmi-locate-smbios.c: Re-work locate API with
	error code returns.  Use new error logging routines appropriately.

	* bmc-watchdog/src/, ipmi-locate/src/, libfreeipmi/src/udm/:
	Re-work to use new locate API.

	* libfreeipmi/src/ipmi-semaphores.h,
	libfreeipmi/src/ipmi-semaphores.c: Remove unused code.  Re-work
	for better erorr reporting/logging.

	* libfreeipmi/include/freeipmi/ipmi-smic-api.h,
	libfreeipmi/src/ipmi-smic-api.c: Removed files.

	* libfreeipmi/: Adjust remaining code for removal of smic api.

	* configure.ac: Update libfreeipmi version.
		
2007-11-24  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-outofband-hostname-hostranged.man: Fix
	english.
	
2007-11-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-kcs-api.c (_ipmi_kcs_cmd_write),
	libfreeipmi/src/ipmi-ssif-api.c (_ipmi_ssif_cmd_write): Fix error
	handling mem-leak corner case.

	* configure.ac: Prepare for beta release.

	* Tagged Release-0_5_0_beta2.

2007-11-24  Dmitry Frolov <frol@nov.net>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c: Fix FreeBSD
	port compile bug.

2007-11-22  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-sdr-cache.c, common/src/ipmi-sdr-cache-reads.c,
	common/src/ipmi-sdr-cache-writes.c: Remove unneeded includes.
	
2007-11-21  Albert Chu <chu11@llnl.gov>
